syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.ptracker.service";
option java_outer_classname = "OtherEventProto";

package com.github.ptracker.service;

import "com/github/ptracker/entity/OtherEvent.proto";

service OtherEvent {

  rpc get(OtherEventGetRequest) returns (OtherEventGetResponse) {}

  rpc query(OtherEventQueryRequest) returns (OtherEventQueryResponse) {}

  rpc create(OtherEventCreateRequest) returns (OtherEventCreateResponse) {}

  rpc update(OtherEventUpdateRequest) returns (OtherEventUpdateResponse) {}

  rpc delete(OtherEventDeleteRequest) returns (OtherEventDeleteResponse) {}
}

message OtherEventGetRequest {
  string id = 1;
}

message OtherEventGetResponse {
  com.github.ptracker.entity.OtherEvent otherEvent = 1;
}

message OtherEventQueryRequest {
  com.github.ptracker.entity.OtherEvent template = 1;
}

message OtherEventQueryResponse {
  repeated com.github.ptracker.entity.OtherEvent otherEvent = 1;
}

message OtherEventCreateRequest {
  com.github.ptracker.entity.OtherEvent otherEvent = 1;
}

message OtherEventCreateResponse {
}

message OtherEventUpdateRequest {
  com.github.ptracker.entity.OtherEvent otherEvent = 1;
  bool should_upsert = 2;
}

message OtherEventUpdateResponse {
}

message OtherEventDeleteRequest {
  string id = 1;
}

message OtherEventDeleteResponse {
}
