syntax = "proto3";

package com.github.ptracker.entity;

option java_package = "com.github.ptracker.entity";
option java_multiple_files = true;
option java_outer_classname = "GardenPlantProto";

message GardenPlant {

  string id = 1;

  string name = 2;

  string garden_id = 3;

  string plant_id = 4;
}
