syntax = "proto3";

package com.github.ptracker.server;

option java_package = "com.github.ptracker.server";
option java_multiple_files = true;
option java_outer_classname = "PlantTrackerServerInitializationParamsProto";

message PlantTrackerServerInitializationParams {
  CosmosDBConfiguration cosmosDBConfiguration = 1;

  GraphQLServerConfiguration graphQLServerConfiguration = 2;
}

message CosmosDBConfiguration {
  string accountEndpoint = 1;

  string accountKey = 2;

  repeated string preferredRegions = 3;
}

message GraphQLServerConfiguration {
  string staticResourcesPath = 1;
}
